@startuml

title __II_MES_OPERATIONS_MANAGER's Class Diagram__\n

  namespace operationsmanager {
    class operationsmanager.Conveyor {
    }
  }
  

  namespace operationsmanager {
    class operationsmanager.DataManagerClient {
    }
  }
  

  namespace operationsmanager {
    class operationsmanager.DeliveryConv {
    }
  }
  

  namespace operationsmanager {
    class operationsmanager.Launcher {
    }
  }
  

  namespace operationsmanager {
    class operationsmanager.MyComparator {
    }
  }
  

  namespace operationsmanager {
    class operationsmanager.OpcuaClient {
    }
  }
  

  namespace operationsmanager {
    class operationsmanager.OperationsManager {
    }
  }
  

  namespace operationsmanager {
    class operationsmanager.OrderMes {
    }
  }
  

  namespace operationsmanager {
    class operationsmanager.OrderQueueMes {
    }
  }
  

  namespace operationsmanager {
    class operationsmanager.PathCalculator {
    }
  }
  

  namespace operationsmanager {
    class operationsmanager.SendOrders {
    }
  }
  

  namespace operationsmanager {
    class operationsmanager.Server {
    }
  }
  

  namespace operationsmanager {
    class operationsmanager.ShopFloor {
    }
  }
  

  namespace operationsmanager {
    class operationsmanager.StaticPath {
    }
  }
  

  namespace operationsmanager {
    class operationsmanager.StorageInConv {
    }
  }
  

  namespace operationsmanager {
    class operationsmanager.StorageOutConv {
    }
  }
  

  namespace operationsmanager {
    class operationsmanager.Task {
    }
  }
  

  namespace operationsmanager {
    class operationsmanager.TransformConv {
    }
  }
  

  namespace operationsmanager {
    class operationsmanager.TransformationTable {
    }
  }
  

  namespace operationsmanager {
    class operationsmanager.XMLwriter {
    }
  }
  

  operationsmanager.MyComparator .up.|> java.util.Comparator
  operationsmanager.OperationsManager o-- operationsmanager.Task : task
  operationsmanager.OrderMes o-- operationsmanager.PathCalculator : pathCalculator
  operationsmanager.PathCalculator o-- operationsmanager.StaticPath : staticPath
  operationsmanager.SendOrders o-- operationsmanager.Task : task
  operationsmanager.SendOrders o-- operationsmanager.TransformationTable : transformationTable
  operationsmanager.ShopFloor o-- operationsmanager.DeliveryConv : deliveryConv
  operationsmanager.ShopFloor o-- operationsmanager.StorageInConv : storageInConv
  operationsmanager.ShopFloor o-- operationsmanager.StorageOutConv : storageOutConv
  operationsmanager.ShopFloor o-- operationsmanager.TransformConv : transformConv1
  operationsmanager.ShopFloor o-- operationsmanager.TransformConv : transformConv2
  operationsmanager.ShopFloor o-- operationsmanager.TransformConv : transformConv3
  operationsmanager.StaticPath -up-|> operationsmanager.ShopFloor
  operationsmanager.Task o-- operationsmanager.OrderQueueMes : current
  operationsmanager.Task o-- operationsmanager.OrderMes : order


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
